// example.proto
syntax = "proto3";  // proto2和proto3都可以, srpc都支持

message UpLoadEchoRequest {
    string username = 1;
    string token = 2;
};

message UpLoadEchoResponse {
    bool success = 1;      
    string message = 2;    
    int64 userid = 3;      
    string username = 4;   
    int32 code = 5; 
}

// 定义一个名字为 Example 的服务
service UpLoad {
    rpc Echo(UpLoadEchoRequest) returns (UpLoadEchoResponse);	// 定义一个rpc 
}
